--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "https://github.com/arenanet/detabbify/issues"
   },
   "scripts": {
-    "test": "tape test/*.js | tap-difflet"
+    "test": "npm run lint && npm run tape",
+    "tape": "tape test/*.js | tap-difflet",
+    "lint": "eslint . && jscs .",
+    "preversion": "npm test",
+    "prepublish": "npm test"
   },
   "keywords": [
     "browserify",
@@ -24,11 +28,19 @@
   "devDependencies": {
     "browserify": "^13.0.0",
     "concat-stream": "^1.5.1",
+    "eslint": "^1.10.3",
     "eslint-config-arenanet": "^1.0.3",
     "from2-string": "^1.1.0",
+    "jscs": "^2.9.0",
     "jscs-preset-arenanet": "^1.0.3",
     "tap-difflet": "^0.4.0",
     "tape": "^4.4.0",
     "tape-catch": "^1.0.4"
+  },
+  "eslintConfig": {
+    "extends": "arenanet",
+    "env": {
+      "node": true
+    }
   }
 }
