--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "npm run lint && npm run tape",
     "tape": "tape test/*.js | tap-difflet",
-    "lint": "eslint . && jscs .",
+    "lint": "eslint .",
     "preversion": "npm test",
     "prepublish": "npm test"
   },
@@ -31,8 +31,6 @@
     "eslint": "^1.10.3",
     "eslint-config-arenanet": "^1.0.3",
     "from2-string": "^1.1.0",
-    "jscs": "^2.9.0",
-    "jscs-preset-arenanet": "^1.0.3",
     "tap-difflet": "^0.4.0",
     "tape": "^4.4.0",
     "tape-catch": "^1.0.4"
