--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "npm run lint && npm run tape",
-    "tape": "tape test/*.js | tap-difflet",
+    "tape": "tape test/*.js | npx tap-difflet",
     "lint": "eslint .",
     "preversion": "npm test",
     "prepublish": "npm test"
@@ -31,7 +31,6 @@
     "eslint": "^5.16.0",
     "eslint-config-arenanet": "^3.3.1",
     "from2-string": "^1.1.0",
-    "tap-difflet": "^0.7.1",
     "tape": "^4.4.0",
     "tape-catch": "^1.0.4"
   },
